Add Vercel Analytics for visitor tracking

--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@vercel/analytics": "^1.5.0",
+    "date-fns": "^2.30.0",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.294.0",
-    "react-router-dom": "^6.20.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
-    "zustand": "^4.4.7",
-    "date-fns": "^2.30.0"
+    "react-router-dom": "^6.20.1",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
