--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.55.0",
     "@vercel/analytics": "^1.5.0",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.4",
@@ -17,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^6.20.1",
     "zustand": "^4.4.7"
   },
