MAJOR CHANGES IMP@

--- a/package.json
+++ b/package.json
@@ -2,33 +2,47 @@
   "name": "carnival-ldn-website",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
+    "server": "node server.js",
+    "dev:full": "concurrently \"npm run server\" \"npm run dev\"",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^3.9.0",
+    "@stripe/stripe-js": "^7.8.0",
     "@supabase/supabase-js": "^2.55.0",
+    "@types/uuid": "^10.0.0",
     "@vercel/analytics": "^1.5.0",
+    "cors": "^2.8.5",
     "date-fns": "^2.30.0",
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
     "framer-motion": "^10.16.4",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.294.0",
+    "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^6.20.1",
+    "stripe": "^18.4.0",
+    "uuid": "^11.1.0",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-react": "^4.1.1",
     "autoprefixer": "^10.4.16",
+    "concurrently": "^9.2.0",
     "eslint": "^8.53.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
