--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,19 @@
 {
   "rewrites": [
     {
-      "source": "/(.*)",
-      "destination": "/index.html"
+      "source": "/api/(.*)",
+      "destination": "/api/$1"
     }
-  ]
+  ],
+  "functions": {
+    "api/create-payment-intent.ts": {
+      "runtime": "nodejs18.x"
+    },
+    "api/confirm-payment.ts": {
+      "runtime": "nodejs18.x"
+    }
+  },
+  "env": {
+    "STRIPE_SECRET_KEY": "@stripe-secret-key"
+  }
 } 
