--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev:full": "concurrently \"npm run server\" \"npm run dev\"",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "tunnel": "npx ngrok http 3000"
   },
   "dependencies": {
     "@stripe/react-stripe-js": "^3.9.0",
@@ -48,6 +49,7 @@
     "eslint": "^8.53.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "ngrok": "^5.0.0-beta.2",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2",
