--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "framer-motion": "^10.16.4",
+    "gtag": "^1.0.1",
     "html5-qrcode": "^2.3.8",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.294.0",
     "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga4": "^2.1.0",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^6.20.1",
