--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^6.20.1",
     "resend": "^6.0.1",
+    "sharp": "^0.34.5",
     "stripe": "^18.4.0",
     "uuid": "^11.1.0",
     "zustand": "^4.4.7"
